# ASR

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  pyproject.toml
conf/: config.yaml
conf/cache/: redis.yaml
conf/dataset/: vlsp2020.yaml
conf/decoder/: tdt.yaml
conf/logging/: wandb.yaml
conf/model/: parakeet-encoder.yaml  tdt-vi.yaml
conf/trainer/: lightning.yaml
src/asr/api/: __init__.py  app.py  inference.py  models.py  routes.py  server.py
src/asr/training/: __init__.py  datamodule.py  lightning_module.py  train.py
tests/: conftest.py  test_lightning_module.py  test_tdt_components.py
