[project]
authors = [{name = "nguyenhuucong", email = "nguyenhuucongzz01@gmail.com"}]
dependencies = []
name = "ASR"
requires-python = ">= 3.11,<3.13"
version = "0.1.0"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

# ============================================================================
# Conda dependencies (ưu tiên conda-forge)
# ============================================================================
[tool.pixi.dependencies]
python = ">=3.11,<3.13"
pytorch = {version = ">=2.6,<2.10", channel = "conda-forge"}
pytorch-cuda = {version = "12.8.*", channel = "conda-forge"}
torchaudio = {version = ">=2.6,<2.10", channel = "conda-forge"}
transformers = ">=4.35.0"
datasets = ">=2.14.0"
librosa = ">=0.10.0"
jiwer = ">=3.0.0"
accelerate = ">=0.24.0"
sentencepiece = ">=0.1.99"
sacremoses = ">=0.0.53"
evaluate = ">=0.4.0"
numpy = ">=1.24.0"
hydra-core = ">=1.3.0"
omegaconf = ">=2.3.0"
lightning = ">=2.1.0"
peft = ">=0.7.0"
wandb = ">=0.16.0"
fastapi = ">=0.104.0"
uvicorn = ">=0.24.0"
pydantic = ">=2.0.0"
python-multipart = ">=0.0.6"
redis-py = ">=5.0.0"
ruff = ">=0.8.0"
pyrefly = ">=0.14.0"
prek = ">=0.1.0"
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"
httpx = ">=0.27.0"
pip = "*"

# ============================================================================
# PyPI dependencies (chỉ khi không có trên conda-forge)
# ============================================================================
[tool.pixi.pypi-dependencies]
asr = { path = ".", editable = true }
# NeMo chỉ có trên PyPI
nemo-toolkit = {version = ">=2.6.0", extras = ["asr"]}

[tool.pixi.pypi-options]
# Fallback index cho PyTorch nếu conda-forge chưa có (CUDA 12.8 build, tương thích 12.9)
extra-index-urls = ["https://download.pytorch.org/whl/cu128"]

# ============================================================================
# Feature: CUDA 12.9
# ============================================================================
[tool.pixi.feature.cuda]
system-requirements = {cuda = "12.9"}

# ============================================================================
# Feature: Training
# ============================================================================
[tool.pixi.feature.training.tasks]
train = "python -m asr.training.train"

# ============================================================================
# Feature: API
# ============================================================================
[tool.pixi.feature.api.tasks]
serve = "python -m asr.api.server"

# ============================================================================
# Feature: Dev tools
# ============================================================================
[tool.pixi.feature.dev.tasks]
lint = "ruff check src/ --fix"
format = "ruff format src/"
typecheck = "pyrefly check src/"
test = "pytest tests/ -v"
pre-commit = "pre-commit run --all-files"
wandb-login = "wandb login"

# ============================================================================
# Environments
# ============================================================================
[tool.pixi.environments]
default = { features = ["all", "cuda"], solve-group = "default" }
training = { features = ["training", "cuda"], solve-group = "default" }
api = { features = ["api"], solve-group = "default" }

# ============================================================================
# Ruff - Linting & Formatting
# ============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["asr"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# ============================================================================
# Pyrefly - Type Checking
# ============================================================================
[tool.pyrefly]
python_version = "3.11"
include = ["src/"]
exclude = ["**/__pycache__", "**/.pixi"]

[tool.pyrefly.config]
strict_mode = true
warn_return_any = true
warn_unused_ignores = true

# ============================================================================
# Prek - Pre-commit Hooks
# ============================================================================
[tool.prek]
repos = [
    { repo = "meta", hooks = [{ id = "check-hooks-apply" }, { id = "check-useless-excludes" }] },
    { repo = "https://github.com/astral-sh/ruff-pre-commit", rev = "v0.8.0", hooks = [
        { id = "ruff", args = ["--fix"] },
        { id = "ruff-format" },
    ]},
    { repo = "https://github.com/pyrefly/pyrefly", rev = "v0.14.0", hooks = [
        { id = "pyrefly" },
    ]},
]

# ============================================================================
# Pytest - Testing
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "api: marks API endpoint tests",
    "training: marks training pipeline tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["src/asr"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
